# youarebot-quickstart

./: .gitignore  README.md  portforward_key  pyproject.toml  run_all_linux.sh  run_all_windows.ps1
app/api/: main.py  models.py
app/core/: logging.py
app/web/: streamlit_app.py
materials/: day06_docker.md  day06_intro.md  day06_plan.md
notebooks/: day08_lecture.md  day08_nlp.ipynb  day08_seminar.md
